[gd_scene load_steps=17 format=3 uid="uid://cwarv58ju0sow"]

[ext_resource type="Script" path="res://core/ui/card_ui/gamepad/gamepad_settings.gd" id="1_o4hh5"]
[ext_resource type="PackedScene" uid="uid://shvyhrv5sx3v" path="res://core/systems/state/state_watcher.tscn" id="2_3x6ad"]
[ext_resource type="Resource" uid="uid://cx8u1y5j7vyss" path="res://assets/state/states/gamepad_settings.tres" id="3_wyv83"]
[ext_resource type="PackedScene" uid="uid://bw8113ocotx2r" path="res://core/systems/effects/fade_effect.tscn" id="4_8f1hr"]
[ext_resource type="PackedScene" uid="uid://uljtdvmuol3l" path="res://core/systems/input/focus_group_setter.tscn" id="5_7qogg"]
[ext_resource type="PackedScene" uid="uid://cr83fmlociwko" path="res://core/ui/components/card_icon_button.tscn" id="6_lxfig"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="7_fyh3u"]
[ext_resource type="PackedScene" uid="uid://ccd4sw84h1qbc" path="res://core/systems/input/back_input_handler.tscn" id="9_5ao07"]
[ext_resource type="Texture2D" uid="uid://cfpaw2eck4ftr" path="res://assets/ui/icons/save-fill.svg" id="10_y71gk"]
[ext_resource type="PackedScene" uid="uid://dbll03tbmw3ps" path="res://core/ui/components/card_mapping_button.tscn" id="11_unkgl"]
[ext_resource type="Texture2D" uid="uid://dj1ohb74chydb" path="res://assets/ui/icons/round-delete-forever.svg" id="12_64hbv"]
[ext_resource type="Texture2D" uid="uid://bfkjkvs3n12cu" path="res://assets/ui/icons/page-template.svg" id="13_4xnt2"]
[ext_resource type="PackedScene" uid="uid://dithv38oqgy58" path="res://core/ui/components/section_label.tscn" id="14_b37ub"]
[ext_resource type="PackedScene" uid="uid://b0cyl6fdqxevn" path="res://core/systems/input/scroller_joystick.tscn" id="14_vtep2"]
[ext_resource type="PackedScene" uid="uid://b3o3wo40sfih1" path="res://core/ui/card_ui/gamepad/gamepad_mapper.tscn" id="16_1g7gi"]
[ext_resource type="PackedScene" uid="uid://c2v6vl2a8mjfb" path="res://core/ui/components/gamepad_diagram.tscn" id="19_f8l1b"]

[node name="GamepadSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_o4hh5")

[node name="StateWatcher" parent="." instance=ExtResource("2_3x6ad")]
state = ExtResource("3_wyv83")

[node name="FadeEffect" parent="StateWatcher" node_paths=PackedStringArray("target") instance=ExtResource("4_8f1hr")]
target = NodePath("../..")
on_signal = "state_entered"
fade_out_signal = "state_exited"
on_signal = "state_entered"

[node name="FocusGroupSetter" parent="StateWatcher" node_paths=PackedStringArray("target") instance=ExtResource("5_7qogg")]
target = NodePath("../../MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/HBoxContainer/FocusGroup")
on_signal = "state_entered"

[node name="BackInputHandler" parent="." instance=ExtResource("9_5ao07")]
process_input_during = Array[Resource("res://core/systems/state/state.gd")]([ExtResource("3_wyv83")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="TopLevelContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ProfileNameLabel" parent="MarginContainer/TopLevelContainer" instance=ExtResource("14_b37ub")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Profile Name"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TopLevelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TopLevelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="FocusGroup" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("current_focus", "focus_neighbor_bottom") instance=ExtResource("7_fyh3u")]
current_focus = NodePath("../SaveButton")
focus_neighbor_bottom = NodePath("../../ScrollContainer/PanelContainer/MarginContainer/ButtonMappingContainer/MappingFocusGroup")

[node name="SaveButton" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_lxfig")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("10_y71gk")

[node name="DeleteButton" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_lxfig")]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("12_64hbv")

[node name="TemplateButton" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_lxfig")]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("13_4xnt2")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"SettingsMenu"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/ScrollContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ButtonMappingContainer" type="VBoxContainer" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/ScrollContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MappingFocusGroup" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/ScrollContainer/PanelContainer/MarginContainer/ButtonMappingContainer" node_paths=PackedStringArray("focus_neighbor_top") instance=ExtResource("7_fyh3u")]
unique_name_in_owner = true
focus_neighbor_top = NodePath("../../../../../HBoxContainer/FocusGroup")

[node name="ButtonsLabel" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/ScrollContainer/PanelContainer/MarginContainer/ButtonMappingContainer" instance=ExtResource("14_b37ub")]
unique_name_in_owner = true
layout_mode = 2
text = "Buttons"

[node name="CardMappingButton" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/ScrollContainer/PanelContainer/MarginContainer/ButtonMappingContainer" instance=ExtResource("11_unkgl")]
layout_mode = 2

[node name="AxesLabel" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/ScrollContainer/PanelContainer/MarginContainer/ButtonMappingContainer" instance=ExtResource("14_b37ub")]
unique_name_in_owner = true
layout_mode = 2
text = "Axes"

[node name="ScrollerJoystick" parent="MarginContainer/TopLevelContainer/HBoxContainer/VBoxContainer/ScrollContainer" instance=ExtResource("14_vtep2")]

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TopLevelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="DiagramTextureRect" parent="MarginContainer/TopLevelContainer/HBoxContainer/MarginContainer" instance=ExtResource("19_f8l1b")]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 2.0

[node name="MapperContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GamepadMapper" parent="MapperContainer" instance=ExtResource("16_1g7gi")]
unique_name_in_owner = true
visible = false
layout_mode = 2
